# Cluely-Clone

./: .dockerignore  .env.example  Dockerfile  README.md  architecture.md  docker-compose.yml  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  system_audio.rs  system_audio_minimal.rs  windows_capture.rs
ui/: audio_transcription.js  deepgram_stt_client.js  gemini_live_client.js  gemini_text_client.js  index.html  main.js  overlay-ui.js  prompt_config.js
