[package]
name = "cluely_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media_Audio",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_Media_Multimedia",
] }
tauri-plugin-global-shortcut = "2"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

